--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
                 <configuration>
                     <suiteXmlFiles>
                         <suiteXmlFile>src\test\resources\testng.xml</suiteXmlFile>
+                        <source>1.8</source>
+                        <target>1.8</target>
                     </suiteXmlFiles>
                 </configuration>
             </plugin>
